--- a/index.html
+++ b/index.html
@@ -6,7 +6,192 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <header>
+      <a class="logo">
+        <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+      </a>
+      <form action="#" method="get">
+        <input type="search" placeholder="Поиск:">
+      </form>
+      <ul class="user-menu">
+        <li><a href="blank.html">Закладки</a></li>
+        <li><a href="blank.html">Корзина</a></li>
+        <li><a href="blank.html">Оформить заказ</a></li>
+      </ul>
+      <section>
+        <p>
+          <i>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</i>
+        </p>
+        <p class="phone-text"> +7 800 555-86-28</p>
+      <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      <section>
+        <a href="blank.html">Равшан Джамшутович</a>
+        <ul class="profile-menu">
+          <li><a href="blank.html">Мои заказы</a></li>
+          <li><a href="blank.html">Личный кабинет</a></li>
+        </ul>
+      </section>
+        <nav>
+          <ul class="navigation">
+            <li><a href="blank.html">Главная</a></li>
+            <li><a href="blank.html">Компания</a></li>
+            <li><a href="blank.html">Каталог</a></li>
+            <li><a href="blank.html">Новости</a></li>
+            <li><a href="blank.html">Спецпредложения</a></li>
+            <li><a href="blank.html">Доставка</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+        </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин инструментов "Техномарт"</h1>
+    <section> 
+      <h2>Каталог</h2>
+      <ul class="categories">
+        <li><h3>Материалы</h3><a href="blank.html">НА ЛЮБОЙ ВКУС</a></li>
+        <li><h3>Инструмент</h3><a href="blank.html">НА ВСЕ СЛУЧАИ</a></li>
+        <li><h3>Техника</h3><a href="blank.html"></a>ДЛЯ СТРОЙКИ</li>
+        <li><h3>Перфораторы</h3><a href="blank.html">ОТКРЫТЬ КАТАЛОГ</a></li>
+        <li><h3>Скидки 50%</h3><a href="blank.html">НА 350 ТОВАРОВ</a></li>
+        <li><h3>Доставка</h3><a href="blank.html">БЕСПЛАТНО</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Популярные товары:</h2>
+      <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+      <ul class="popular">
+        <li><a href="product.html"><h3>Перфоратор BOSCH BFG 9000</h3>
+        <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><s>32500 Р.</s></p>
+          <button type="button">25500 Р.</button>
+        </li>
+        <li><a href="product.html" class="new"><h3>Перфоратор BOSCH BFG 3000</h3>
+          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><s>22500 Р.</s></p>
+          <button type="button">15500 Р.</button>
+        </li>
+        <li><a href="product.html"><h3>Перфоратор BOSCH BFG 6000</h3>
+            <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+            <p><s>30500 Р.</s></p>
+            <button type="button">25500 Р.</button>
+        </li>
+        <li><a href="product.html" class="new"><h3>Перфоратор BOSCH BFG 2000</h3>
+            <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+            <p><s>22500 Р.</s></p>
+            <button type="button">12500 Р.</button>
+        </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители:</h2>
+      <a href="blank.html">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+      <ul class="vendors">
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="BOSCH"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Makita"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="DeWALT"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Интерскол"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="HITACHI"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="LG"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="AEG power solutions"></li>
+        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="metabo"></li>
+      </ul>
+      </section>
+      <section>
+        <h2>Сервисы:</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <button type="button">Доставка</button>
+        <ul class="delivery">
+          <li><h3>Доставка</h3><br>
+          <p>Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем, <br>
+            поднимая его на ваш этаж!</p></li>
+          <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка доставки"></li>
+        <button type="button">Гарантия</button>
+        <button type="button">Кредит</button>
+      </section>
+      <section>
+        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.<br>
+
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:<br></p>
+          <ul class="transport">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="blank.html">Подробнее о компании</a>
+      </section>
+      <section>
+        <h2>КОНТАКТЫ</h2>
+        <p>Вы можете забрать товар сами,<br>
+          заехав в наш офис:</p>
+          <a href="blank.html">Заблудились? НапиШИТЕ НАМ!</a>
+      </section>
+    </main>
+    <footer>
+      <section></section>
+      <a class="logo">
+        <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+      </a>
+      <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      <p class="phone-text"> +7 800 555-86-28</p>
+      <nav>
+        <ul class="navigation">
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+        </ul>
+      </nav>
+      <section>
+        <p>© 2010–2021 Компания «Техномарт»<br>Все права защищены</p>
+      </section>
+      <section>
+        <ul class="social-media">
+          <li><a href="blank.html">VK</a></li>
+          <li><a href="blank.html">Faceebook</a></li>
+          <li><a href="blank.html">Instagram</a></li>
+        </ul>
+      </section>
+      <section>
+        <p>Обратная связь:</p>
+        <p class="email">mail@htmlacademy.ru</p>
+      </section>
+      <section>
+        <p>Разработано —</p>
+        <a href="htmlacademy.ru">htmlacademy.ru</a>
+      </section>
+    </footer>
+  <section>
+    <h2>Форма обратной связи</h2>
+    <form action="https://echo.htmlacademy.ru" method="POST">
+      <p><label for="feedback-name">Ваше имя:</label>
+      <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+
+      <label for="feedback-email">Ваш e-mail:</label>
+      <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
+      </p>
+      
+      <p><label for="feedback-text">Текст письма:</label>
+      <input id="feedback-text" type="text" name="text" placeholder="В свободной форме">
+      <button type="submit">Отправить</button>
+      </p>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
+  <section>
+    <h2>Как нас найти</h2>
+    <!-- Карта -->
+    <button type="button">Закрыть</button>
+  </section>
 
   </body>
 </html>
