--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         </p>
         <p class="phone-text"> +7 800 555-86-28</p>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      </section>
       <section>
-        <a href="blank.html">Равшан Джамшутович</a>
-        <ul class="profile-menu">
-          <li><a href="blank.html">Мои заказы</a></li>
-          <li><a href="blank.html">Личный кабинет</a></li>
-        </ul>
+        <button type="button">Войти</button>
+        <button type="button">Регистрация</button>
       </section>
         <nav>
           <ul class="navigation">
@@ -60,22 +58,22 @@
       <h2>Популярные товары:</h2>
       <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul class="popular">
-        <li><a href="product.html"><h3>Перфоратор BOSCH BFG 9000</h3>
+        <li><a href="product.html">Перфоратор BOSCH BFG 9000
         <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
           <p><s>32500 Р.</s></p>
           <button type="button">25500 Р.</button>
         </li>
-        <li><a href="product.html" class="new"><h3>Перфоратор BOSCH BFG 3000</h3>
+        <li><a href="product.html" class="new">Перфоратор BOSCH BFG 3000
           <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
           <p><s>22500 Р.</s></p>
           <button type="button">15500 Р.</button>
         </li>
-        <li><a href="product.html"><h3>Перфоратор BOSCH BFG 6000</h3>
+        <li><a href="product.html">Перфоратор BOSCH BFG 6000
             <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
             <p><s>30500 Р.</s></p>
             <button type="button">25500 Р.</button>
         </li>
-        <li><a href="product.html" class="new"><h3>Перфоратор BOSCH BFG 2000</h3>
+        <li><a href="product.html" class="new">Перфоратор BOSCH BFG 2000
             <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
             <p><s>22500 Р.</s></p>
             <button type="button">12500 Р.</button>
@@ -108,11 +106,13 @@
             Ведь мы неплохо заработаем, <br>
             поднимая его на ваш этаж!</p></li>
           <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка доставки"></li>
-        <button type="button">Гарантия</button>
-        <button type="button">Кредит</button>
+        </ul>
+        <h3><button type="button">Гарантия</button></h3>
+        <h3><button type="button">Кредит</button></h3>
       </section>
       <section>
-        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <h2>О Компании</h2>
+        <p>КОМПАНИЯ «Техномарт»</p>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.<br>
 
           Мы можем доставить ваш товар в самые отдаленные точки России!<br>
@@ -132,12 +132,13 @@
       </section>
     </main>
     <footer>
-      <section></section>
+      <section>
       <a class="logo">
         <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
       </a>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       <p class="phone-text"> +7 800 555-86-28</p>
+      </section>
       <nav>
         <ul class="navigation">
           <li><a href="blank.html">Компания</a></li>
@@ -155,6 +156,7 @@
         <p>© 2010–2021 Компания «Техномарт»<br>Все права защищены</p>
       </section>
       <section>
+        <h2>СОЦИАЛЬНЫЕ СЕТИ</h2>
         <ul class="social-media">
           <li><a href="blank.html">VK</a></li>
           <li><a href="blank.html">Faceebook</a></li>
