--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <li><a href="blank.html">Оформить заказ</a></li>
       </ul>
       <section>
-        <p>
-          <i>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</i>
-        </p>
+        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
         <p class="phone-text"> +7 800 555-86-28</p>
-      <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+        <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       </section>
       <section>
         <button type="button">Войти</button>
@@ -41,17 +39,19 @@
           </ul>
         </nav>
     </header>
+
     <main>
       <h1>Интернет-магазин инструментов "Техномарт"</h1>
     <section> 
       <h2>Каталог</h2>
       <ul class="categories">
-        <li><h3>Материалы</h3><a href="blank.html">НА ЛЮБОЙ ВКУС</a></li>
-        <li><h3>Инструмент</h3><a href="blank.html">НА ВСЕ СЛУЧАИ</a></li>
-        <li><h3>Техника</h3><a href="blank.html"></a>ДЛЯ СТРОЙКИ</li>
-        <li><h3>Перфораторы</h3><a href="blank.html">ОТКРЫТЬ КАТАЛОГ</a></li>
-        <li><h3>Скидки 50%</h3><a href="blank.html">НА 350 ТОВАРОВ</a></li>
-        <li><h3>Доставка</h3><a href="blank.html">БЕСПЛАТНО</a></li>
+        <li><h3>Материалы</h3><a href="blank.html">на любой вкус</a></li>
+        <li><h3>Инструмент</h3><a href="blank.html">на все случаи</a></li>
+        <li><h3>Техника</h3><a href="blank.html"></a>для стройки</li>
+        <li><h3>Перфораторы</h3> Настоящие мужские игрушки <a href="blank.html">открыть каталог</a></li>
+        <li><h3>Дрели</h3> Соседям на радость <a href="blank.html">открыть каталог</a></li>
+        <li><h3>Скидки 50%</h3><a href="blank.html">на 350 товаров</a></li>
+        <li><h3>Доставка</h3><a href="blank.html">бесплатно</a></li>
       </ul>
     </section>
     <section>
@@ -59,9 +59,9 @@
       <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul class="popular">
         <li><a href="product.html">Перфоратор BOSCH BFG 9000
-        <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
-          <p><s>32500 Р.</s></p>
-          <button type="button">25500 Р.</button>
+         <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+         <p><s>32500 Р.</s></p>
+         <button type="button">25500 Р.</button>
         </li>
         <li><a href="product.html" class="new">Перфоратор BOSCH BFG 3000
           <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
@@ -69,66 +69,65 @@
           <button type="button">15500 Р.</button>
         </li>
         <li><a href="product.html">Перфоратор BOSCH BFG 6000
-            <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
-            <p><s>30500 Р.</s></p>
-            <button type="button">25500 Р.</button>
+          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><s>30500 Р.</s></p>
+          <button type="button">25500 Р.</button>
         </li>
         <li><a href="product.html" class="new">Перфоратор BOSCH BFG 2000
-            <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
-            <p><s>22500 Р.</s></p>
-            <button type="button">12500 Р.</button>
+          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><s>22500 Р.</s></p>
+          <button type="button">12500 Р.</button>
         </li>
         </ul>
       </section>
       <section>
-        <h2>Популярные производители:</h2>
-      <a href="blank.html">ВСЕ ПРОИЗВОДИТЕЛИ</a>
-      <ul class="vendors">
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="BOSCH"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Makita"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="DeWALT"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Интерскол"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="HITACHI"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="LG"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="AEG power solutions"></li>
-        <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="metabo"></li>
-      </ul>
+       <h2>Популярные производители:</h2>
+        <a href="blank.html">все производители</a>
+        <ul class="vendors">
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="BOSCH"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Makita"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="DeWALT"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Интерскол"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="HITACHI"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="LG"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="AEG power solutions"></li>
+         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="metabo"></li>
+        </ul>
       </section>
       <section>
         <h2>Сервисы:</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <button type="button">Доставка</button>
-        <ul class="delivery">
-          <li><h3>Доставка</h3><br>
-          <p>Мы с удовольствием доставим ваш товар прямо<br>
-            к вашему подъезду совершенно бесплатно!<br>
-            Ведь мы неплохо заработаем, <br>
-            поднимая его на ваш этаж!</p></li>
-          <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка доставки"></li>
-        </ul>
-        <h3><button type="button">Гарантия</button></h3>
-        <h3><button type="button">Кредит</button></h3>
+         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+         <ul class="services">
+          <li><h3>Доставка</h3>
+           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка доставки">
+          </li>
+          <li><h3>Гарантия</h3>
+           <p>Если купленный у нас товар поломается или заискрит,а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка гарантии">
+          </li>
+          <li><h3>Кредит</h3>
+           <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка кредита">
+          </li>
+         </ul>
       </section>
       <section>
         <h2>О Компании</h2>
-        <p>КОМПАНИЯ «Техномарт»</p>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.<br>
-
-          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:<br></p>
+        <p>Компания «Техномарт»</p>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <ul class="transport">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+           <li>Деловые линии</li>
+           <li>Автотрейдинг</li>
+           <li>ЖелДорЭкспедиция</li>
           </ul>
           <a href="blank.html">Подробнее о компании</a>
       </section>
       <section>
-        <h2>КОНТАКТЫ</h2>
-        <p>Вы можете забрать товар сами,<br>
-          заехав в наш офис:</p>
-          <a href="blank.html">Заблудились? НапиШИТЕ НАМ!</a>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a href="blank.html">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer>
