Исправления по заданию 1
(:

--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
 
 <body>
     <header>
         <a class="logo" href="index.html">
-          <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+          <img src="img/logo-technomart.png" width="108" height="18" alt="Логотип Техномарт">
         </a>
         <form action="#" method="get">
           <input type="search" placeholder="Поиск:">
@@ -20,7 +24,7 @@
         </ul>
         <section>
           <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-          <p class="phone-text"> +7 800 555-86-28</p>
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
         </section>
         <section>
@@ -93,22 +97,24 @@
           </section>
           <section>
             <h2>Сортировка</h2>
-            <button type="submit">По цене</button>
-            <button type="submit">По типу</button>
-            <button type="submit">По функционалу</button>
+            <ul>
+              <li><a href="blank.html">По цене</a></li>
+              <li><a href="blank.html">По типу</a></li>
+              <li><a href="blank.html">По функционалу</a></li>
+            </ul>
           </section>
           <section>
             <h2>Список перфораторов</h2>
             <ul class="catalog">
               <li><a href="product.html">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                  <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                  <p><img src="img/bosh-bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p></a>
                   <p><s>30500 Р.</s></p>
                   <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <p><img src="img/bosh-bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
@@ -120,38 +126,38 @@
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html"  class="new">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p><img src="img/bosh-bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <p><img src="img/bosh-bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html"  class="new">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p><img src="img/bosh-bfg-2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html"  class="new">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p><img src="img/bosh-bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <p><img src="img/bosh-bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
               <li><a href="product.html"  class="new">
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p><img src="img/bosh-bfg-2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p></a>
                 <p><s>30500 Р.</s></p>
                 <button type="button">25500 Р.</button>
               </li>
@@ -164,7 +170,7 @@
             </ul>
           </section>
           <article>
-            <h1>Пара слов о перфораторах</h1>
+            <h2>Пара слов о перфораторах</h2>
             <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
                 Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
                 В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
@@ -174,10 +180,10 @@
       <footer>
         <section>
         <a class="logo">
-          <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+          <img src="img/logo-technomart.png" width="138" height="23" alt="Логотип Техномарт">
         </a>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
-        <p class="phone-text"> +7 800 555-86-28</p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
         </section>
         <nav>
           <ul class="navigation">
@@ -198,14 +204,14 @@
         <section>
           <h2>СОЦИАЛЬНЫЕ СЕТИ</h2>
           <ul class="social-media">
-            <li><a href="blank.html">VK</a></li>
-            <li><a href="blank.html">Faceebook</a></li>
-            <li><a href="blank.html">Instagram</a></li>
+            <li><a href="blank.html"><img src="img/icon-vk.png" width="26" height="15" alt="ВКонтакте"></a></li>
+            <li><a href="blank.html"><img src="img/icon-fb.png" width="12" height="22" alt="Faceebook"></a></li>
+            <li><a href="blank.html"><img src="img/icon-insta.png" width="21" height="21" alt="Instagram"></a></li>
           </ul>
         </section>
         <section>
           <p>Обратная связь:</p>
-          <p class="email">mail@htmlacademy.ru</p>
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </section>
         <section>
           <p>Разработано —</p>
