--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
 
     <header>
       <a class="logo">
-        <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.png" width="108" height="18" alt="Логотип Техномарт">
       </a>
       <form action="#" method="get">
         <input type="search" placeholder="Поиск:">
@@ -20,7 +24,7 @@
       </ul>
       <section>
         <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p class="phone-text"> +7 800 555-86-28</p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       </section>
       <section>
@@ -59,22 +63,22 @@
       <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul class="popular">
         <li><a href="product.html">Перфоратор BOSCH BFG 9000
-         <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+         <p><img src="img/bosh-bfg-9000.jpg" width="184" height="164" alt="Перфоратор BOSCH"></p></a>
          <p><s>32500 Р.</s></p>
          <button type="button">25500 Р.</button>
         </li>
         <li><a href="product.html" class="new">Перфоратор BOSCH BFG 3000
-          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><img src="img/bosh-bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH"></p></a>
           <p><s>22500 Р.</s></p>
           <button type="button">15500 Р.</button>
         </li>
         <li><a href="product.html">Перфоратор BOSCH BFG 6000
-          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><img src="img/bosh-bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH"></p></a>
           <p><s>30500 Р.</s></p>
           <button type="button">25500 Р.</button>
         </li>
         <li><a href="product.html" class="new">Перфоратор BOSCH BFG 2000
-          <p><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="165" alt="Перфоратор BOSCH"></p></a>
+          <p><img src="img/bosh-bfg-2000.jpg" width="127" height="112" alt="Перфоратор BOSCH"></p></a>
           <p><s>22500 Р.</s></p>
           <button type="button">12500 Р.</button>
         </li>
@@ -83,33 +87,35 @@
       <section>
        <h2>Популярные производители:</h2>
         <a href="blank.html">все производители</a>
-        <ul class="vendors">
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="BOSCH"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Makita"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="DeWALT"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="Интерскол"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="HITACHI"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="LG"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="AEG power solutions"></li>
-         <li><img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="220" height="145" alt="metabo"></li>
+        <ul class="vendors" width="940" height="419">
+         <li><img src="img/logo-bosch.png" width="126" height="37" alt="BOSCH"></li>
+         <li><img src="img/logo-makita.png" width="123" height="40" alt="Makita"></li>
+         <li><img src="img/logo-dewalt.png" width="146" height="44" alt="DeWALT"></li>
+         <li><img src="img/logo-interskol.png" width="200" height="76" alt="Интерскол"></li>
+         <li><img src="img/logo-hitachi.png" width="169" height="31" alt="HITACHI"></li>
+         <li><img src="img/logo-lg.png" width="121" height="73" alt="LG"></li>
+         <li><img src="img/logo-aeg.png" width="151" height="98" alt="AEG power solutions"></li>
+         <li><img src="img/logo-metabo.png" width="206" height="73" alt="metabo"></li>
         </ul>
       </section>
       <section>
         <h2>Сервисы:</h2>
          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-         <ul class="services">
-          <li><h3>Доставка</h3>
-           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка доставки">
-          </li>
-          <li><h3>Гарантия</h3>
-           <p>Если купленный у нас товар поломается или заискрит,а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка гарантии">
-          </li>
-          <li><h3>Кредит</h3>
-           <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-           <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="468" height="261" alt="Иконка кредита">
-          </li>
+         <ul class="services-buttons">
+           <li><button type="button">Доставка</button></li>
+           <li><button type="button">Гарантия</button></li>
+           <li><button type="button">Кредит</button></li>
+         </ul>
+         <ul class="services-description">
+           <li><p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+            <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="465" height="285" alt="Иконка доставки">
+           </li>
+           <li><p>Если купленный у нас товар поломается или заискрит,а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+            <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="465" height="285" alt="Иконка гарантии">
+           </li>
+           <li><p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+            <img src="/htmlcss/31/book/01-html/06-methodology/img/photo-BFG9000.jpg" width="465" height="285" alt="Иконка кредита">
+           </li>
          </ul>
       </section>
       <section>
@@ -127,16 +133,17 @@
       <section>
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a href="https://goo.gl/maps/GLG3Ct9RerdBTmxL9"><img src="img/map.png" width="300" height="158" alt="Карта магазина по адресу г. Санкт-Петербург, наб. Реки Карповки, 5 лит П"></a>
         <a href="blank.html">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer>
       <section>
       <a class="logo">
-        <img src="/htmlcss/31/book/01-html/06-methodology/img/logo.svg" width="110" height="30" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.png" width="138" height="23" alt="Логотип Техномарт">
       </a>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
-      <p class="phone-text"> +7 800 555-86-28</p>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
       </section>
       <nav>
         <ul class="navigation">
@@ -157,14 +164,14 @@
       <section>
         <h2>СОЦИАЛЬНЫЕ СЕТИ</h2>
         <ul class="social-media">
-          <li><a href="blank.html">VK</a></li>
-          <li><a href="blank.html">Faceebook</a></li>
-          <li><a href="blank.html">Instagram</a></li>
+          <li><a href="blank.html"><img src="img/icon-vk.png" width="26" height="15" alt="ВКонтакте"></a></li>
+          <li><a href="blank.html"><img src="img/icon-fb.png" width="12" height="22" alt="Faceebook"></a></li>
+          <li><a href="blank.html"><img src="img/icon-insta.png" width="21" height="21" alt="Instagram"></a></li>
         </ul>
       </section>
       <section>
         <p>Обратная связь:</p>
-        <p class="email">mail@htmlacademy.ru</p>
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </section>
       <section>
         <p>Разработано —</p>
