--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <section>
        <h2>Популярные производители:</h2>
         <a href="blank.html">все производители</a>
-        <ul class="vendors" width="940" height="419">
+        <ul class="vendors">
          <li><img src="img/logo-bosch.png" width="126" height="37" alt="BOSCH"></li>
          <li><img src="img/logo-makita.png" width="123" height="40" alt="Makita"></li>
          <li><img src="img/logo-dewalt.png" width="146" height="44" alt="DeWALT"></li>
