--- a/catalog.html
+++ b/catalog.html
@@ -218,6 +218,14 @@
           <a href="htmlacademy.ru">htmlacademy.ru</a>
         </section>
       </footer>
+      <section>
+          <p>Товар добавлен в корзину!</p>
+          <ul class="shopping-cart">
+            <li><a href="blank.html">оформить заказ</a></li>
+            <li><a href="blank.html">продолжить покупки</a></li>
+          </ul>
+          <button type="button">x</button>
+      </section>
 
 </body>
 
